부산대 BE_양준영 2단계 - 관리자 화면 (#178)
* fix: 허용되지 않은 Method로 요청 시 400이 아닌 405 반환하도록 수정 (next-step/spring-gift-product#31)

* fix: 상품 생성 시 가격 음수 입력 방지 Validation 추가 (next-step/spring-gift-product#31)

* refactor: 개행 2줄인 부분 1줄로 변경 (next-step/spring-gift-product#31)

* refactor: Product 업데이트 로직 Product 클래스 내부에서 수행하도록 수정(next-step/spring-gift-product#31)

* fix: Product 생성, 수정 시 빈 값이 아닌 생성, 수정한 객체 돌려주도록 변경 (next-step/spring-gift-product#31)

* refactor: ProductNotFoundException을 EntityNotFoundException 으로 변경하여 모든 클래스 수용하도록 수정 (next-step/spring-gift-product#31)

* refactor: 상품 존재 여부 확인하는 중복 코드 validateProduct 메서드로 통합 (next-step/spring-gift-product#31)

* refactor: thread_safe 위해 ConcurrentHashMap로 수정(next-step/spring-gift-product#31)

* fix: return type 오류 수정

* refactor: toResponseDto 제거 후 ProductResponseDto의 생성자 통하도록 수정 (next-step/spring-gift-product#31)

* feat: webjars bootstrap, bootstrap-icon 관련 의존성 추가

* feat: thymeleaf 이용해 관리자 화면 구현

* docs: 2단계 구현할 기능 목록 작성

* fix: 문구 표기 제품->상품으로 모두 변경

* refactor: Bare Exception -> EntityNotFoundException만 catch 하도록 수정

* refactor: 변수명 및 컨벤션 수정

* refactor: ProductCreateRequestDto 자체를 Product 생성자 인자로 변경, Product.update의 인자도 ProductUpdateDto 자체로 변경

* refactor: deleteProduct 메서드에서 유효성 검사 후 삭제하도록 순서 수정

* fix: exception 발생 시 클라이언트에 exception 내용도 전달하도록 수정