@@ -1,64 +1,61 @@
 package gift.product.service;
 
-import gift.exception.ProductNotFoundException;
+import gift.exception.EntityNotFoundException;
 import gift.product.dto.ProductCreateRequestDto;
 import gift.product.dto.ProductResponseDto;
 import gift.product.dto.ProductUpdateRequestDto;
 import gift.product.entity.Product;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicLong;
 
 @Service
 public class ProductService {
-    private final Map<Long, Product> products = new HashMap<>();
-    private long nextId = 0;
 
-    public void createProduct(ProductCreateRequestDto product) {
-        final long newProductId = ++nextId;
-        products.put(newProductId, new Product(
-                newProductId,
-                product.name(),
-                product.price(),
-                product.imageUrl()
-        ));
+    private final ConcurrentHashMap<Long, Product> products = new ConcurrentHashMap<>();
+    private final AtomicLong nextId = new AtomicLong(0);
+
+    private void validateProduct(Product product) {
+        if (product == null) {
+            throw new EntityNotFoundException("해당 상품을 찾을 수 없습니다.");
+        }
     }
 
-    public void updateProduct(Long id, ProductUpdateRequestDto product) {
-        if (!products.containsKey(id))
-            throw new ProductNotFoundException("해당 상품을 찾을 수 없습니다.");
+    public ProductResponseDto createProduct(ProductCreateRequestDto product) {
+        final long newProductId = nextId.incrementAndGet();
 
+        Product newProduct = new Product(newProductId, product);
+        products.put(newProductId, newProduct);
+        return new ProductResponseDto(newProduct);
+    }
+
+    public ProductResponseDto updateProduct(Long id, ProductUpdateRequestDto product) {
         Product existingProduct = products.get(id);
-        if (product.name() != null) {
-            existingProduct.setName(product.name());
-        }
-        if (product.price() != null) {
-            existingProduct.setPrice(product.price());
-        }
-        if (product.imageUrl() != null) {
-            existingProduct.setImageUrl(product.imageUrl());
+        validateProduct(existingProduct);
+
+        synchronized (existingProduct) {
+            existingProduct.update(product);
+            return new ProductResponseDto(existingProduct);
         }
     }
 
     public void deleteProduct(Long id) {
-        if (!products.containsKey(id))
-            throw new ProductNotFoundException("해당 상품을 찾을 수 없습니다.");
-
+        Product existingProduct = products.get(id);
+        validateProduct(existingProduct);
         products.remove(id);
     }
 
     public List<ProductResponseDto> getProducts() {
         return products.values().stream()
-                .map(Product::toResponseDto).collect(Collectors.toList());
+                .map(ProductResponseDto::new)
+                .toList();
     }
 
     public ProductResponseDto getProduct(Long id) {
-        if (!products.containsKey(id))
-            throw new ProductNotFoundException("해당 상품을 찾을 수 없습니다.");
-
-        return products.get(id).toResponseDto();
+        Product product = products.get(id);
+        validateProduct(product);
+        return new ProductResponseDto(product);
     }
 }
